Fixed double border visible in tabular list

--- a/wcfsetup/install/files/style/ui/tabularBox.scss
+++ b/wcfsetup/install/files/style/ui/tabularBox.scss
@@ -23,7 +23,7 @@
 	color: $wcfTabularBoxHeadline;
 	
 	& + li {
-		border-top-width: 0;
+		border-top-width: 0 !important;
 	}
 }
 
